2.3/2.3.2/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: tls
              mountPath: /etc/nginx/ssl
              readOnly: true
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: html
          configMap:
            name: nginx-conf
        - name: tls
          secret:
            secretName: nginx-tls
        - name: config
          configMap:
            name: nginx-conf
